width, heigth,border e padding no box model

--- a/3_ID_CLASS/index.html
+++ b/3_ID_CLASS/index.html
@@ -9,9 +9,9 @@
 
 </head>
 <body>
-    <h1>ID e CLASS</h1>
-    <h2>CLASS</h2>
-    <p>existem duas caracteristicas do class:</p>
+    <h1 class="fundo-amarelo">ID e CLASS</h1>
+    <h2 class="fundo-amarelo texto-vermelho">CLASS</h2>
+    <p class="fundo-amarelo">existem duas caracteristicas do class:</p>
      <ul>
         <li> é possivel ultilizar o mesmo eclass em varios elementos diferentes </li>
         <li>é possivel ultilizar varos eclass no MESMO elemento</li>
