--- a/4_BOX_MODEL/2_padding_margin/index.html
+++ b/4_BOX_MODEL/2_padding_margin/index.html
@@ -9,8 +9,16 @@
 <body>
     <h1>padding e margin</h1>
 
-    <div>
+    <div class="algum">
         algum conteudo.
     </div>
+
+    <div class="outro">
+     outro <br>  conteudo
+    </div>
+    
+    <div class="ultimo">
+        ultimo conteudo
+       </div>
 </body>
 </html>
